cmake_minimum_required(VERSION 3.20)
project(Problem)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(subOfLargeNumbers subOfLargeNumbers.cpp)
add_executable(sortList sortList.cpp)
add_executable(findMedianSortedArrays findMedianSortedArrays.cpp)
add_executable(isValidBST isValidBST.cpp)
add_executable(findRepeatNum findRepeatNum.cpp)
add_executable(firstNotRepeatingChar firstNotRepeatingChar.cpp)
add_executable(getKLeastNum getKLeastNum.cpp)
add_executable(slidingWindowMaximumValue slidingWindowMaximumValue.cpp)
add_executable(mergeSortedArray mergeSortedArray.cpp)
add_executable(findContinuousSequence findContinuousSequence.cpp)
add_executable(lowestCommonAncester lowestCommonAncester.cpp)
add_executable(levelOrder levelOrder.cpp)
add_executable(binarySearch binarySearch.cpp)
add_executable(moreThanHalfNum moreThanHalfNum.cpp)
add_executable(pathSum_LeetCode437 pathSum_LeetCode437.cpp)
add_executable(maxPathSum_LeetCode124 maxPathSum_LeetCode124.cpp)
add_executable(findNumsAppearOnce findNumsAppearOnce.cpp)
add_executable(trap_LeetCode42 trap_LeetCode42.cpp)
add_executable(circularLinkedList circularLinkedList.cpp)
add_executable(dicesProbability_offer60 dicesProbability_offer60.cpp)
add_executable(trapRainWater_LeetCode407 trapRainWater_LeetCode407.cpp)
add_executable(searchRange_LeetCode34 searchRange_LeetCode34.cpp)
add_executable(cuttingRope_LeetCode343 cuttingRope_LeetCode343.cpp)
add_executable(reConstructBinaryTree reConstructBinaryTree.cpp)
add_executable(test test.cpp)
add_executable(lastRemaining_offer62 lastRemaining_offer62.cpp)
add_executable(regularExpressionMatching regularExpressionMatching_LeetCode10.cpp)
