cmake_minimum_required(VERSION 3.20)
project(Problem)

set(CMAKE_CXX_STANDARD 14)

add_executable(binarySearch binarySearch.cpp)
add_executable(main main.cpp)
add_executable(subOfLargeNumbers subOfLargeNumbers.cpp)
add_executable(sortList sortList.cpp)
add_executable(findMedianSortedArrays findMedianSortedArrays.cpp)
add_executable(isValidBST isValidBST.cpp)
add_executable(findRepeatNum findRepeatNum.cpp)
add_executable(firstNotRepeatingChar firstNotRepeatingChar.cpp)
add_executable(getKLeastNum getKLeastNum.cpp)
add_executable(slidingWindowMaximumValue slidingWindowMaximumValue.cpp)
add_executable(mergeSortedArray mergeSortedArray.cpp)
add_executable(findContinuousSequence findContinuousSequence.cpp)
add_executable(lowestCommonAncester lowestCommonAncester.cpp)
add_executable(levelOrder levelOrder.cpp)
add_executable(moreThanHalfNum moreThanHalfNum.cpp)
add_executable(pathSum_LeetCode437 pathSum_LeetCode437.cpp)
add_executable(maxPathSum_LeetCode124 maxPathSum_LeetCode124.cpp)
add_executable(findNumsAppearOnce findNumsAppearOnce.cpp)
add_executable(trap_LeetCode42 trap_LeetCode42.cpp)
add_executable(circularLinkedList circularLinkedList.cpp)
add_executable(dicesProbability_offer60 dicesProbability_offer60.cpp)
add_executable(trapRainWater_LeetCode407 trapRainWater_LeetCode407.cpp)
add_executable(searchRange_LeetCode34 searchRange_LeetCode34.cpp)
add_executable(cuttingRope_LeetCode343 cuttingRope_LeetCode343.cpp)
add_executable(reConstructBinaryTree_LeetCode105 reConstructBinaryTree_LeetCode105.cpp)
add_executable(test test.cpp)
add_executable(lastRemaining_offer62 lastRemaining_offer62.cpp)
add_executable(regularExpressionMatching regularExpressionMatching_LeetCode10.cpp)
add_executable(flattenBinaryTree flattenBinaryTree.cpp)
add_executable(levelOrder_LeetCode102 levelOrder_LeetCode102.cpp)
add_executable(isSameTree_LeetCode100 isSameTree_LeetCode100.cpp)
add_executable(isSymmetric_LeetCode101 isSymmetric_LeetCode101.cpp)
add_executable(inorderTraversal_LeetCode94 inorderTraversal_LeetCode94.cpp)
add_executable(generateTrees_LeetCode95 generateTrees_LeetCode95.cpp)
add_executable(numTree_LeetCode96 numTree_LeetCode96.cpp)
add_executable(invertTree invertTree_LeetCode226.cpp)
add_executable(connect_LeetCode116 connect_LeetCode116.cpp)
add_executable(constructMaximumBinaryTree_LeetCode654 constructMaximumBinaryTree_LeetCode654.cpp)
add_executable(reConstructBinaryTree_LeetCode106 reConstructBinaryTree_LeetCode106.cpp)
add_executable(findDuplicateSubtrees_LeetCode652 findDuplicateSubtrees_LeetCode652.cpp)
add_executable(convertBST convertBST.cpp)
add_executable(buySellStock buySellStock.cpp)
add_executable(pathInMatrix pathInMatrix.cpp)
add_executable(minPathSum_LeetCode64 minPathSum_LeetCode64.cpp)
add_executable(stringMultiply_LeetCode43 stringMultiply_LeetCode43.cpp)
add_executable(largestRectangleArea_LeetCode84 largestRectangleArea_LeetCode84.cpp)
add_executable(wordBreak_LeetCode139 wordBreak_LeetCode139.cpp)
add_executable(minWindow_LeetCode76 minWindow_LeetCode76.cpp)
add_executable(lengthOfLongestSubstring_LeetCode3 lengthOfLongestSubstring_LeetCode3.cpp)
add_executable(maxEnvelopes_LeetCode354 maxEnvelopes_LeetCode354.cpp)
add_executable(longestCommonSubsequence_LeetCode1143 longestCommonSubsequence_LeetCode1143.cpp)
add_executable(maxCoins_LeetCode312 maxCoins_LeetCode312.cpp)
add_executable(kthSmallest_LeetCode230 kthSmallest_LeetCode230.cpp)
add_executable(longestValidParentheses_LeetCode32 longestValidParentheses_LeetCode32.cpp)